# pleb-r1

./: .env.docker  .env.example  .gitignore  ANALYTICS_FEATURES.md  BLOSSOM_FEATURES.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Cargo_old.toml  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS.md  DOCKER.md  FEED_PAGE.md  LICENSE  MISSION_COMPLETE.md  Makefile  NEXT_STEPS.md  NIP23_SUPPORT.md  NOSTR_AUTH_UPDATE.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_READINESS_ASSESSMENT.md  PROJECT_SETUP.md  README.md  TECHNICAL_ARCHITECTURE.md  demo.ps1  deploy.sh  docker-compose.dev.yml  docker-compose.yml  docker-manage.ps1  docker-manage.sh  docker-validate.ps1  generate_test_events.sh  nginx-r1.pleb.one.conf  run-relay.ps1  start-relay.ps1  test-websocket.sh  test_nip23.json  (+1 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
config/: default.toml  production.toml
infrastructure/docker/: docker-compose.yml
monitoring/: prometheus.yml
services/analytics-api/: Dockerfile  go.mod  main.go
services/analytics-service/: Cargo.toml  Dockerfile
services/analytics-service/src/: analytics.rs  main.rs
services/api-gateway/: go.mod
services/api-gateway/cmd/: main.go
services/blossom-server/: Dockerfile  go.mod  main.go
services/community-web/: Dockerfile  README.md  api-test.html  index.html  landing.html  nginx.conf  nginx.dev.conf  package-simple.json  package.json  tailwind.config.js
services/community-web/src/: App.tsx  index.css
services/community-web/src/components/: Layout.tsx  LoginComponent.tsx
services/community-web/src/contexts/: AuthContext.tsx
services/community-web/src/pages/: CommunityPage.tsx  DashboardPage.tsx  EducationPage.tsx  FeedPage.tsx  HomePage.tsx  IdentityPage.tsx
services/config-manager/: Cargo.toml
services/config-manager/src/: lib.rs
services/nostr-types/: Cargo.toml
services/nostr-types/src/: crypto.rs  error.rs  event.rs  filter.rs  lib.rs  message.rs  validation.rs
services/relay-engine/: Cargo.toml  Cargo_old.toml  Dockerfile  PRODUCTION_READY.md  README.md  TEST_CONFIG.md  docker-compose.yml  prometheus.yml  test.ps1
services/relay-engine/benches/: relay_benchmarks.rs
services/relay-engine/src/: app_state.rs  config.rs  config_old.rs  connection.rs  database.rs  dev_main.rs  event_handler.rs  lib.rs  main.rs  main_old.rs  metrics.rs  mock_database.rs  rate_limiter.rs  test_utils.rs  websocket.rs
services/relay-engine/tests/: database_integration.rs  e2e_integration.rs  websocket_integration.rs
services/storage-layer/: Cargo.toml
services/storage-layer/src/: error.rs  lib.rs
web/src/components/: AnalyticsDashboard.tsx
