[workspace]
members = [
    "services/relay-engine",
]
resolver = "2"

[workspace.dependencies]
# Nostr ecosystem - battle-tested libraries
nostr = "0.32"
nostr-relay-pool = "0.32"
nostr-database = "0.32"

# Async Runtime
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Web Framework & HTTP
axum = { version = "0.7", features = ["ws", "tokio", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration Management
config = "0.14"
figment = { version = "0.10", features = ["toml", "json", "yaml", "env"] }
clap = { version = "4.0", features = ["derive"] }

# Database & Storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "streams", "cluster"] }
deadpool-redis = "0.14"
deadpool-postgres = "0.12"

# Metrics & Monitoring
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.20", features = ["metrics"] }

# Logging & Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"

# Rate Limiting
governor = "0.6"
tower-governor = "0.0.4"

# Authentication & Authorization
jsonwebtoken = "9.1"
argon2 = "0.5"

# Cryptography
secp256k1 = { version = "0.28", features = ["rand", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

# Development & Testing
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.12"

# MinIO for Blossom
minio = "0.1"
mime = "0.3"
url = "2.0"
