[package]
name = "pleb-one-nostr-types"
version = "0.1.0"
edition = "2021"
description = "Core Nostr types and validation for Pleb.One"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
