[package]
name = "pleb-one-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer abstraction for Pleb.One"

[dependencies]
pleb-one-nostr-types = { path = "../nostr-types" }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Async & Utilities
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Testing
[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
